# working

ml/: MLintro.ipynb  README.md  beginner.ipynb  normalize.ipynb
ml/.ipynb_checkpoints/: MLintro-checkpoint.ipynb  Untitled-checkpoint.ipynb
work1/: CMakeLists.txt  README.md  init_vis.mac  solenoid1 copy.cc  solenoid1.cc  vis_b1.mac
work1/include/: ActionInitialization.hh  DetectorConstruction.hh  PrimaryGeneratorAction.hh
work1/src/: ActionInitialization.cc  DetectorConstruction.cc  PrimaryGeneratorAction.cc
